--- a/finish_task.css
+++ b/finish_task.css
@@ -317,8 +317,6 @@ align-items: center;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    
-
     box-sizing: border-box;
     border-radius: 30px;
     margin: 50px 30px 30px;
@@ -652,3 +650,21 @@ align-items: center;
      background: #555;
 
   }
+  
+ul{
+  list-style: none;
+  padding: 0;
+  overflow-y: scroll;
+  height: 300px;
+
+}
+
+ul li{
+  margin: 10px 10px 10px;
+  box-sizing: border-box;
+  box-shadow: 0px 5px 2px whitesmoke;
+  height: 50px;
+  padding: 20px ;
+  overflow-y: scroll;
+}
+
